--- a/index.html
+++ b/index.html
@@ -8,6 +8,7 @@
     <link rel="stylesheet" href="styles.css">
 </head>
 <body>
+    <button id="resetButton">Reset Grid</button>
     <div id="container"></div>
 
     <script src="main.js"></script>
