--- a/index.html
+++ b/index.html
@@ -8,8 +8,19 @@
     <link rel="stylesheet" href="styles.css">
 </head>
 <body>
+    <header class="header">
+        <h1 class="title">sketch-pad</h1>
+    </header>
     <button id="resetButton">Reset Grid</button>
     <div id="container"></div>
+    <footer class="footer">
+        <p>Copyright 
+            <script>
+                document.write(new Date().getFullYear());
+            </script>
+            by Daniel Kavatha. All rights reserved.
+        </p>
+    </footer>
 
     <script src="main.js"></script>
 </body>
