--- a/index.html
+++ b/index.html
@@ -8,11 +8,13 @@
     <link rel="stylesheet" href="styles.css">
 </head>
 <body>
-    <header class="header">
-        <h1 class="title">sketch-pad</h1>
-    </header>
-    <button id="resetButton">Reset Grid</button>
-    <div id="container"></div>
+    <section>
+        <header class="header">
+            <h1 class="title">sketch-pad</h1>
+        </header>
+        <button id="resetButton">Reset Grid</button>
+        <div id="container"></div>
+    </section>
     <footer class="footer">
         <p>Copyright 
             <script>
